--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html>
 
-  {% include head.html %}
+{% include head.html %}
 
-  <body>
+<body>
 
     {% include header.html %}
 
-    <div class="page-content">
-      <div class="wrapper">
+    <div id="content">
         {{ content }}
-      </div>
     </div>
+
+    <br/>
 
     {% include footer.html %}
 
-  </body>
+    {% include scripts.html %}
+
+</body>
 
 </html>
