--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,14 +1,14 @@
 ---
 layout: default
 ---
-<article class="post">
 
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-  </header>
+<div class="container narrow">
+    <br/>
 
-  <div class="post-content">
-    {{ content }}
-  </div>
+    <h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>
 
-</article>
+    <div class="post">
+        {{ content }}
+    </div>
+
+</div>
