--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,15 +1,20 @@
 ---
 layout: default
 ---
-<article class="post" itemscope itemtype="http://schema.org/BlogPosting">
+<div class="container narrow">
+    <br/>
 
-  <header class="post-header">
-    <h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>
-    <p class="post-meta"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>{% if page.author %} • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}</p>
-  </header>
+    <h1 class="post-title" itemprop="name headline">
+        {% if page.week %}
+            <b>{{ page.week }}:&nbsp;</b>
+        {% endif %}
+        {{ page.title }}
+    </h1>
+    <time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%Y %B %-d"
+    }}</time>
 
-  <div class="post-content" itemprop="articleBody">
-    {{ content }}
-  </div>
+    <div class="post">
+        {{ content }}
+    </div>
 
-</article>
+</div>
