New colors! And I think fully cleaned up to post.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col l6 s12">
                 <h5 class="white-text">About this Site</h5>
-                <p class="grey-text text-lighten-4">This contains my work for MIT's How To Make (almost) Anything class (MAS.643) for the Fall 2017 semester.</p>
+                <p class="grey-text text-lighten-4">This contains my work for MIT's <i>How To Make (almost) Anything</i> class (MAS.643) for the Fall 2017 semester. It is built with <a href="https://jekyllrb.com/">Jekyll</a> using the <a href="http://materializecss.com/">Materialize</a> framework. </p>
             </div>
             <div class="col l4 offset-l2 s12">
                 <h5 class="white-text">Links</h5>
