--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,11 +4,12 @@
             <li><a href="{{ "/" | prepend: site.baseurl }}">Home</a></li>
             <li><a href="{{ "/about" | prepend: site.baseurl }}">About</a></li>
             <li><a href="{{ "/feed.xml" | prepend: site.baseurl }}">RSS Feed</a></li>
-
         </ul>
 
         <ul id="nav-mobile" class="side-nav">
-            <li><a href="{{ "/feed.xml" | prepend: site.baseurl }}">RSS Feed</a></li>
+            <li><a href="{{ "/" | prepend: site.baseurl }}"><i class="mdi mdi-home"></i> Home</a></li>
+            <li><a href="{{ "/about" | prepend: site.baseurl }}"><i class="mdi mdi-information"></i> About</a></li>
+            <li><a href="{{ "/feed.xml" | prepend: site.baseurl }}"><i class="mdi mdi-rss"></i> RSS Feed</a></li>
         </ul>
         <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
     </div>
