--- a/_sass/components/_variables.scss
+++ b/_sass/components/_variables.scss
@@ -35,11 +35,11 @@
 // 1. Colors
 // ==========================================================================
 
-$primary-color: color("blue-grey", "base") !default;
+$primary-color: color("deep-purple", "base") !default;
 $primary-color-light: lighten($primary-color, 15%) !default;
 $primary-color-dark: darken($primary-color, 15%) !default;
 
-$secondary-color: color("deep-orange", "base") !default;
+$secondary-color: color("cyan", "base") !default;
 $success-color: color("green", "base") !default;
 $error-color: color("red", "base") !default;
 $link-color: $secondary-color !default;
