Updates to use config

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,11 +10,11 @@
                 <ul>
                     <li><a class="grey-text text-lighten-3" href="http://fab.cba.mit.edu/classes/863.17/"><i class="mdi mdi-link"></i>
                         Class Homepage</a></li>
-                    <li><a class="grey-text text-lighten-3" href="http://juliaebert.com"><i class="mdi mdi-home"></i>
+                    <li><a class="grey-text text-lighten-3" href="{{ site.homepage }}"><i class="mdi mdi-home"></i>
                         Julia's Homepage</a></li>
                     <li><a class="grey-text text-lighten-3" href="https://github.com/jtebert"><i
                             class="mdi mdi-github-face"></i> Github</a></li>
-                    <li><a class="grey-text text-lighten-3" href="mailto:julia@juliaebert.com"><i
+                    <li><a class="grey-text text-lighten-3" href="mailto:{{ site.email }}"><i
                             class="mdi mdi-email"></i> Email</a></li>
                 </ul>
             </div>
