--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,9 +7,11 @@
 
     {% include header.html %}
 
-    <div id="content">
-        {{ content }}
-    </div>
+    <main>
+        <div id="content">
+            {{ content }}
+        </div>
+    </main>
 
     <br/>
 
