Add week 2 stuff

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -1,6 +1,19 @@
 nav .brand-logo {
   font-weight: 300;
-  font-size: 22px;
+  font-size: 18px;
+  @media #{$medium-and-up} {
+    font-size: 22px;
+  }
+}
+
+.header-image-container {
+  width: 100%;
+  max-height: 600px;
+  overflow: hidden;
+}
+
+.header-image {
+  width: 100%;
 }
 
 .text-primary-color {
@@ -35,13 +48,13 @@ p {
 
 .post {
 
-  h1, h2, h3, h4, h5, h6 {
+  h1, h2, h3, h4, h5, h6, br {
     content: ' ';
     display: table;
     clear: both;
   }
 
-  p {
+  p, li {
     font-size: 16px;
   }
 
@@ -98,22 +111,37 @@ p {
     }
   }
 
+  img.medium {
+    width: 700px;
+    display: block;
+    margin: auto;
+  }
+
   img, iframe, video {
     &.small {
-      float: left;
+      &:not(.active) {
+        float: left;
+      }
       margin: 0 3% 32px 0;
       &.right {
-        float: right;
+        &:not(.active) {
+          float: right;
+        }
         margin: 0 0 32px 3%;
       }
     }
   }
 
   img.mini {
+    margin-bottom: 32px;
     @media #{$medium-and-up} {
       margin: 0 3% 32px 0;
-      max-width: 280px;
+      max-width: 33%;
       float: left;
+      &.right {
+        float: right;
+        margin: 0 0 32px 3%;
+      }
     }
   }
 
