Add spice rack and start of week 3

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,7 +8,7 @@
             <div class="col l4 offset-l2 s12">
                 <h5 class="white-text">Links</h5>
                 <ul>
-                    <li><a class="grey-text text-lighten-3" href="http://fab.cba.mit.edu/classes/863.17/"><i class="mdi mdi-link"></i>
+                    <li><a class="grey-text text-lighten-3" href="http://fab.cba.mit.edu/classes/863.17/"><i class="mdi mdi-school"></i>
                         Class Homepage</a></li>
                     <li><a class="grey-text text-lighten-3" href="{{ site.homepage }}"><i class="mdi mdi-home"></i>
                         Julia's Homepage</a></li>
