--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -6,6 +6,14 @@ nav .brand-logo {
   }
 }
 
+hr {
+  margin: 16px 0;
+  display: block;
+  background-color: color("grey", "lighten-2");
+  height: 1px;
+  border: 0;
+}
+
 .header-image-container {
   width: 100%;
   max-height: 600px;
